<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/newStudentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/thirtytwodp"
        android:layout_marginEnd="@dimen/eightdp"
        android:text="@string/new_student"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/thirtytwodp"
        android:layout_marginEnd="@dimen/eightdp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newStudentLabel">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixteendp"
        android:layout_marginEnd="@dimen/eightdp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixteendp"
        android:layout_marginEnd="@dimen/eightdp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/courseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixteendp"
        android:padding="@dimen/sixteendp"
        android:text="@string/course"
        android:textSize="@dimen/fifteensp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Spinner
        android:id="@+id/courseSelection"
        android:layout_width="@dimen/threehundreddp"
        android:layout_height="@dimen/fiftydp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixteendp"
        android:layout_marginEnd="@dimen/eightdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courseLabel"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cohortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixteendp"
        android:padding="@dimen/sixteendp"
        android:text="@string/cohort"
        android:textSize="@dimen/fifteensp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseLabel" />

    <Spinner
        android:id="@+id/cohortSelection"
        android:layout_width="@dimen/threehundreddp"
        android:layout_height="@dimen/fiftydp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/eightdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cohortLabel"
        app:layout_constraintTop_toBottomOf="@+id/courseSelection" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirtytwodp"
        android:paddingTop="@dimen/sixteendp"
        android:paddingBottom="@dimen/sixteendp"
        android:paddingStart="@dimen/eightdp"
        android:paddingEnd="@dimen/eightdp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cohortSelection" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirtytwodp"
        android:paddingTop="@dimen/sixteendp"
        android:paddingBottom="@dimen/sixteendp"
        android:paddingStart="@dimen/eightdp"
        android:paddingEnd="@dimen/eightdp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>